--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,15 @@
     </parent>
     <modules>
         <module>core</module>
-        <!--<module>bootstrap</module>-->
         <module>starter</module>
         <module>web</module>
+        <module>persistent</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.6</jdk.version>
         <lombok.plugin.version>1.16.20</lombok.plugin.version>
+        <mybatis.version>1.3.1</mybatis.version>
     </properties>
 
     <dependencyManagement>
@@ -31,6 +32,11 @@
                 <artifactId>lombok</artifactId>
                 <version>${lombok.plugin.version}</version>
                 <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
