--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <jdk.version>1.6</jdk.version>
         <lombok.plugin.version>1.16.20</lombok.plugin.version>
         <mybatis.version>1.3.1</mybatis.version>
+        <druid.version>1.1.8</druid.version>
     </properties>
 
     <dependencyManagement>
@@ -60,5 +61,16 @@
             </plugins>
         </pluginManagement>
     </build>
+
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/libs-milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
 </project>
