--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -8,15 +8,13 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
 
     <artifactId>starter</artifactId>
 
     <profiles>
         <profile>
             <id>product</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
             <properties>
                 <resource.path>src/main/profile/product</resource.path>
             </properties>
@@ -29,6 +27,9 @@
         </profile>
         <profile>
             <id>dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <properties>
                 <resource.path>src/main/profile/dev</resource.path>
             </properties>
@@ -36,10 +37,24 @@
     </profiles>
 
     <dependencies>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.yaccc.leaf</groupId>
+            <artifactId>persistent</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>logback-classic</artifactId>
+                    <groupId>ch.qos.logback</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>log4j-to-slf4j</artifactId>
+                    <groupId>org.apache.logging.log4j</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.yaccc.leaf</groupId>
@@ -49,6 +64,7 @@
     </dependencies>
 
     <build>
+        <finalName>leafserver-${version}</finalName>
         <resources>
             <resource>
                 <directory>${resource.path}</directory><!--根据profile 确定资源-->
@@ -57,9 +73,25 @@
                 <directory>src/main/resources/</directory>
             </resource>
         </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>1.5.10.RELEASE</version>
+                <configuration>
+                    <mainClass>org.yaccc.leaf.starter.boot.LeafServerBootstarp</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
-
-
-
-
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/libs-milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
