--- a/leafserver-core/pom.xml
+++ b/leafserver-core/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>core</artifactId>
+    <artifactId>leafserver-core</artifactId>
 
 
     <dependencies>
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>org.yaccc.leaf</groupId>
-            <artifactId>persistent</artifactId>
+            <artifactId>leafserver-persistent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
