--- a/leafserver-persistent/pom.xml
+++ b/leafserver-persistent/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>persistent</artifactId>
+    <artifactId>leafserver-persistent</artifactId>
 
     <dependencies>
         <dependency>
