--- a/leafserver-starter/pom.xml
+++ b/leafserver-starter/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
 
-    <artifactId>starter</artifactId>
+    <artifactId>leafserver-starter</artifactId>
 
     <profiles>
         <profile>
@@ -43,7 +43,7 @@
         </dependency>
         <dependency>
             <groupId>org.yaccc.leaf</groupId>
-            <artifactId>persistent</artifactId>
+            <artifactId>leafserver-persistent</artifactId>
             <version>1.0-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
@@ -58,7 +58,7 @@
         </dependency>
         <dependency>
             <groupId>org.yaccc.leaf</groupId>
-            <artifactId>web</artifactId>
+            <artifactId>leafserver-web</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
