--- a/leafserver-web/pom.xml
+++ b/leafserver-web/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>web</artifactId>
+    <artifactId>leafserver-web</artifactId>
 
     <dependencies>
         <dependency>
@@ -46,7 +46,7 @@
         </dependency>
         <dependency>
             <groupId>org.yaccc.leaf</groupId>
-            <artifactId>persistent</artifactId>
+            <artifactId>leafserver-persistent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
