SQL and segment create

--- a/leafserver-persistent/pom.xml
+++ b/leafserver-persistent/pom.xml
@@ -27,6 +27,10 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
