--- a/leafserver-starter/pom.xml
+++ b/leafserver-starter/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>leafserver-web</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.yaccc.leaf</groupId>
+            <artifactId>leafserver-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
