修改springboot版本,加上banner

--- a/leafserver-starter/src/main/profile/dev/application.yaml
+++ b/leafserver-starter/src/main/profile/dev/application.yaml
@@ -21,5 +21,7 @@
        poolPreparedStatements : true
        maxPoolPreparedStatementPerConnectionSize : 20
        minEvictableIdleTimeMillis : 30000
-
+   output :
+     ansi :
+       enabled : ALWAYS
 
