--- a/leafserver-core/pom.xml
+++ b/leafserver-core/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>server</artifactId>
-        <groupId>org.yaccc.leaf</groupId>
+        <groupId>org.yaccc.leafserver</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -18,12 +18,17 @@
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.yaccc.leafserver</groupId>
+            <artifactId>leafserver-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>19.0</version>
         </dependency>
         <dependency>
-            <groupId>org.yaccc.leaf</groupId>
+            <groupId>org.yaccc.leafserver</groupId>
             <artifactId>leafserver-persistent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
