差不多要写完了

--- a/leafserver-persistent/pom.xml
+++ b/leafserver-persistent/pom.xml
@@ -27,6 +27,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.yaccc.leafserver</groupId>
+            <artifactId>leafserver-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
