--- a/leafserver-web/pom.xml
+++ b/leafserver-web/pom.xml
@@ -50,6 +50,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.yaccc.leafserver</groupId>
+            <artifactId>leafserver-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
