--- a/leafserver-core/pom.xml
+++ b/leafserver-core/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>leafserver-persistent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.perf4j</groupId>
+            <artifactId>perf4j</artifactId>
+            <version>0.9.16</version>
+        </dependency>
     </dependencies>
 
     <build>
